+mustafa | fix: Create Company and Finish buttons are clickable, fix: Shared with 1 people  should appear below the share button, fix: No gap between Email ID field & Share button, fix: Scroll bar starts from the Fixed Groups tab, fix: Two scroll bars over lap each other in manage modal, fix: add n manage design issues

--- a/src/assets/css/style-1.css
+++ b/src/assets/css/style-1.css
@@ -954,7 +954,7 @@ header .navbar-nav > li.active {
 }
 
 #getGroupModal {
-  height: 550px;
+  height: 100%;
   overflow: hidden;
 }
 
